# Project-Cassandra

./: .gitignore  README.md  git_recommit.py
backend/: .env.example  pyproject.toml  test_swarm.py
backend/cassandra/: config.py  main.py
backend/cassandra/agents/: base.py  divergence_monitor.py  gatekeeper.py  injector.py
backend/cassandra/analysis/: embeddings.py
backend/cassandra/mcp/: interceptor.py  parser.py  schemas.py
backend/cassandra/proxy/: router.py
backend/cassandra/telemetry/: event_bus.py  replay.py  session_store.py  ws_handler.py
backend/demo/: interactive_test.py  run_scenarios.py  simulate.py
dashboard/: package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: cot-stream.tsx  divergence-gauge.tsx  icons.tsx  mcp-call-log.tsx  metrics-panel.tsx  panel.tsx  perturbation-diff.tsx  session-timeline.tsx
dashboard/src/hooks/: use-cassandra-ws.ts
dashboard/src/lib/: types.ts
