[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cassandra"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "google-genai>=0.2.0",
    "google-auth>=2.30.0",
    "sentence-transformers>=3.0.0",
    "numpy>=2.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "websockets>=13.0",
]
